<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.fragments.UploadFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.fragments.AnalysisFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.fragments.SlideshowFragment"
        android:label="慈善活动"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_main"
        android:name="com.example.myapplication.ui.fragments.MainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/nav_commodity"
        android:name="com.example.myapplication.ui.fragments.CommodityFragment"
        android:label="@string/menu_commodity"
        tools:layout="@layout/fragment_commodity" />
    <fragment
        android:id="@+id/nav_message"
        android:name="com.example.myapplication.ui.fragments.MessageFragment"
        android:label="@string/menu_message"
        tools:layout="@layout/fragment_message" />
    <fragment
        android:id="@+id/nav_record"
        android:name="com.example.myapplication.ui.fragments.RecordFragment"
        android:label="@string/menu_record"
        tools:layout="@layout/fragment_record" />
    <fragment
        android:id="@+id/nav_selling"
        android:name="com.example.myapplication.ui.fragments.SellingFragment"
        android:label="@string/menu_record"
        tools:layout="@layout/fragment_selling" />
</navigation>