<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/uploadcommoidty"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_trending_up_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_selling"
            android:icon="@drawable/selling"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/charity"
            android:title="慈善活动" />
    </group>
</menu>