<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/return_return"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/arrowleftbold" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="设置"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/AccountNumber"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/SU_GOto_pd"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/personaldata"
            android:textColor="#000000"
            android:textSize="14.01sp" />

        <TextView
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_weight="1"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:src="@mipmap/icon_xl" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SU_GOto_cp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/ChangPassword"
            android:textColor="#000000"
            android:textSize="14sp" />
        <TextView
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


        <ImageView
            android:layout_weight="1"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:src="@mipmap/icon_xl" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/notice"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/MessagePushAndNotification"
            android:textColor="#000000"
            android:textSize="14.01sp" />
        <TextView
            android:layout_gravity="center"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


    <Switch
        android:id="@+id/Check_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/other"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/Btn_FeedBack"
            android:textColor="#000000"
            android:textSize="14.01sp" />

        <TextView
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_weight="1"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:src="@mipmap/icon_xl" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SU_clean"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/ClearCache"
            android:textColor="#000000"
            android:textSize="14.01sp" />


        <TextView
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/shuzi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <ImageView
            android:layout_weight="1"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="18sp"
            android:layout_gravity="center"
            android:src="@mipmap/icon_xl" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/RRRRRRRR"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="#000000"
            android:text="@string/CurrentVersion"
            android:textSize="14.01sp" />


        <TextView
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_weight="1"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:src="@mipmap/icon_xl" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tcdl"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/tcdl"
            android:textColor="#000000"
            android:textSize="13.01sp" />


        <TextView
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_weight="1"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:src="@mipmap/icon_xl" />
    </LinearLayout>



</LinearLayout>