<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="22dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="35dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginRight="28dp"
            android:layout_marginLeft="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_account"
                android:textColor="@color/black"
                android:textSize="18dp" />
            <EditText
                android:id="@+id/login_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入账号"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:textSize="14dp"
                android:background="@null"
                />
            <!--            <View-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="1dp"-->
            <!--                android:background="#D3D"-->
            <!--                android:layout_marginLeft="25dp"-->
            <!--                android:layout_marginRight="25dp"/>-->
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginRight="28dp"
            android:layout_marginLeft="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_password"
                android:textColor="@color/black"
                android:textSize="18dp" />
            <EditText
                android:id="@+id/login_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入密码"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:singleLine="true"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:textSize="14dp"/>
            <!--            <View-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="1dp"-->
            <!--                android:background="#D3D"-->
            <!--                android:layout_marginLeft="25dp"-->
            <!--                android:layout_marginRight="25dp"/>-->
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginRight="28dp"
            android:layout_marginLeft="28dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_security_code"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_yzm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="请输入验证码"
                    android:singleLine="true"
                    android:background="@null"
                    android:textColor="@color/black"
                    android:layout_marginTop="15dp"
                    android:textSize="14dp" />
                    <ImageView
                        android:id="@+id/code_yzm"
                        android:layout_width="89dp"
                        android:layout_height="match_parent" />
            </LinearLayout>

            <!--            <View-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="1dp"-->
            <!--                android:background="#D3D"-->
            <!--                android:layout_marginLeft="25dp"-->
            <!--                android:layout_marginRight="25dp"/>-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_button"
                android:layout_width="215.5dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:background="@drawable/loginbutton"
                android:text="@string/login_btn"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/pu_xuehao"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:text="注册"
                android:textSize="16dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_Forget_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="忘记密码？"
            android:gravity="center"
            android:textColor="#409EFF"
            android:textSize="10sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>